Deployment/dev/k8sClusterDepAWSKOPS/modules/hello-node/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-deployment
  namespace: hello-node
spec:
  selector:
    matchLabels:
      app: helloNode
  replicas: 2
  template:
    metadata:
      labels:
        app: helloNode
    spec:
      containers:
        - name: log-streaming-sidecar
          image: busybox
          command: ["tail", "-f", "/var/log/log.json"]       
          volumeMounts:
            - name: log-volume-of-node
              mountPath: /var/log/            
        - name: hello-node-container
          imagePullPolicy: Always
          image: 'mufazzal/hello-node:develop-45'
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: config-map-volume
              mountPath: /usr/src/apps/HelloNode/runtimeConfigs/
            - name: log-volume-of-node
              mountPath: /usr/src/logs/HelloNode/              
            # - name: shred-disk
            #   mountPath: /usr/src/apps/HelloNode/hn_shared_disk/
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "250m"            

      volumes:
        - name: log-volume-of-node
          emptyDir: {}      
        - name: config-map-volume
          configMap:
            name: config-map-hello-node
        # - name: shred-disk
        #   persistentVolumeClaim:
        #     claimName: hn-shared-pvc
