Deployment/dev/k8sClusterDepAWSKOPS/modules/hello-node/anotherAppExtService.yaml
apiVersion: v1
kind: Service
metadata:
  name: anotherapp-ext-service
  namespce: 'hello-node'
spec:
  type: ExternalName
  externalName: 'another-app-cluster-ip.another-app.svc.cluster.local'
