Deployment/dev/k8sClusterDepAWSKOPS/modules/hello-node/anotherAppExtService1.yaml
apiVersion: v1
kind: Service
metadata:
  name: another-app-ext-name
  namespace: 'hello-node'
spec:
  type: ExternalName
  externalName: 'another-app-cluster-ip.another-app.svc.cluster.local'
  ports:
  - port: 80
