Deployment/dev/k8sClusterDepAWSKOPS/modules/hello-node/hnMsExtService.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn-ms1-ext-name
  namespace: 'hello-node'
spec:
  type: ExternalName
  externalName: 'hn-ms1-cluster-ip.hn-ms1.svc.cluster.local'
  ports:
  - port: 3050
---
apiVersion: v1
kind: Service
metadata:
  name: hn-ms2-ext-name
  namespace: 'hello-node'
spec:
  type: ExternalName
  externalName: 'hn-ms2-cluster-ip.hn-ms2.svc.cluster.local'
  ports:
  - port: 3050
---
apiVersion: v1
kind: Service
metadata:
  name: hn-ms3-ext-name
  namespace: 'hello-node'
spec:
  type: ExternalName
  externalName: 'hn-ms3-cluster-ip.hn-ms3.svc.cluster.local'
  ports:
  - port: 3050
