Deployment/dev/k8sClusterDepAWSKOPS/modules/hello-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-node
  name: hello-node-ingress
  annotations:
    cert-manager.io/cluster-issuer: "muf-ca-cluster-issuer"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - www.hn.com
    - hn.com
    secretName: hn-com-certificate
  rules:
    - host: 'www.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-node-cluster-ip
                port:
                  number: 3010
